# edash-frontend

./: .env  .gitignore  .yarnrc.yml  CLA.md  README.md  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.husky/: pre-commit
build-scripts/: README.md  webpack.cjs
build-scripts/gulp/: download-translations.js  fetch-nightly-translations.js
cast/: README.md
cast/public/: manifest.json
cast/src/html/: _social_meta.html.template  faq.html.template  index.html.template
demo/public/: manifest.json
demo/src/custom-cards/: ha-demo-card.ts
demo/src/html/: _social_meta.html.template  index.html.template
demo/src/stubs/: hassio_supervisor.ts
gallery/src/: ha-gallery.ts
gallery/src/data/: demo_states.js
gallery/src/html/: index.html.template
hassio/src/: hassio-main.ts
hassio/src/backups/: hassio-backups.ts
hassio/src/components/: hassio-upload-backup.ts  (+1 more)
public/: __init__.py
script/: core
src/cast/: sender_messages.ts
src/components/: ha-logo-svg.ts  ha-sidebar.ts  ha-stt-picker.ts  ha-theme-picker.ts  ha-tts-picker.ts
src/data/: automation_i18n.ts  hardware.ts  logbook.ts  media-player.ts  onboarding.ts  trace.ts  update.ts
src/entrypoints/: service_worker.ts
src/fake_data/: demo_config.ts  demo_services.ts  provide_hass.ts
src/html/: authorize.html.template  index.html.template  onboarding.html.template
src/layouts/: ha-init-page.ts  home-assistant.ts
src/onboarding/: ha-onboarding.ts
src/resources/: ha-style.ts
src/state/: disconnect-toast-mixin.ts  panel-title-mixin.ts
src/translations/: en.json
(+46 files in other folders)
